--- a/chat1.html
+++ b/chat1.html
@@ -154,49 +154,6 @@
                "Къде се намираш": "Аз съществувам в интернет.",  
                "Какво е интернет": "Глобална мрежа, която свързва компютри по целия свят.",  
                "Какво е изкуствен интелект": "Технология, която имитира човешкия интелект.",  
-               "Какво е облачна технология": "Услуга за съхраняване на данни и приложения онлайн.",  
-               "Какво е 3D принтиране": "Технология за създаване на обекти слой по слой.",  
-               "Какво е HTML": "Език за създаване на уебстраници.",  
-               "Какво е гравитация": "Сила, която привлича обекти един към друг.",  
-               "Какво е светлинна година": "Разстоянието, което светлината изминава за една година.",  
-               "Какво е ДНК": "Молекула с генетичната информация на организмите.",  
-               "Какво е черна дупка": "Регион в космоса с изключително силна гравитация.",  
-               "Какво е Големият взрив": "Теория за началото на Вселената преди 13.8 милиарда години.",  
-               "Кога е открито електричеството": "През 18-ти век от Бенджамин Франклин.",  
-               "Кой е изобретил телефона": "Александър Бел през 1876 година.",  
-               "Кога е създаден първият компютър": "През 1943 година - Colossus.",  
-               "Кой е първият човек в космоса": "Юрий Гагарин през 1961 година.",  
-               "Кой е изобретил електрическата крушка": "Томас Едисън през 1879 година.",  
-               "Какво е Слънчевата система": "Група от планети, които обикалят около Слънцето.",  
-               "Коя е най-голямата планета": "Юпитер.",  
-               "Какво е Млечният път": "Галактиката, в която се намира нашата Слънчева система.",  
-               "Колко далеч е Луната": "Около 384,400 км от Земята.",  
-               "Кой е първият човек на Луната": "Нийл Армстронг през 1969 година.",  
-               "Какво е математиката": "Наука за числата и формите.",  
-               "Какво е химията": "Наука за веществата и тяхното взаимодействие.",  
-               "Какво е физиката": "Наука за природните закони и явления.",  
-               "Какво е биологията": "Наука за живите организми.",  
-               "Какво е географията": "Наука за земята и нейните характеристики.",  
-               "Колко е висок Еверест": "8,848 метра.",  
-               "Коя е най-дългата река": "Нил или Амазонка.",  
-               "Коя е най-голямата пустиня": "Сахара.",  
-               "Кое е най-голямото животно": "Синият кит.",  
-               "Коя е най-старата цивилизация": "Месопотамия.",  
-               "Кое е най-популярното животно в интернет": "Котките!",  
-               "Какво правят пингвините за забавление": "Пързалят се по ледовете.",  
-               "Коя е най-популярната храна в света": "Пицата.",  
-               "Какво е най-вкусното ястие": "Зависи, но пицата и шоколадът са фаворити!",  
-               "Какво правят роботите": "Те ни помагат със задачи.",  
-               "Колко часа трябва да спим": "Между 7 и 9 часа на нощ.",  
-               "Какво е балансирана диета": "Диета с протеини, въглехидрати, мазнини и витамини.",  
-               "Как да останем здрави": "Яжте здравословно, спортувайте и почивайте.",  
-               "Какво е витамин С": "Важен витамин за имунната система.",  
-               "Какво е стрес": "Физическа или емоционална реакция на предизвикателства.",  
-               "Как се казва 'Здравей' на английски?": "Hello.",  
-               "Как се казва 'Благодаря' на испански?": "Gracias.",  
-               "Как се казва 'Мир' на руски?": "Мир.",  
-               "Как се казва 'Да' на японски?": "Hai.",  
-               "Как се казва Любов на френски": "Amour.",  
                "Супер": "Радвам се да го чуя!",
                "Мазна": "Мазна Батьо!",
                "Какъв е смисълът на живота?": "Да бъдем щастливи и да помагаме на другите.",  
@@ -317,9 +274,11 @@
                "Как прекарваш времето си?": "Като ви отговарям и уча нови неща.",  
                "Как прекарваш времето си": "Като ви отговарям и уча нови неща.",  
                "как прекарваш времето си": "Като ви отговарям и уча нови неща.",
+               
                "Как си?": "Чудесно, благодаря! А ти?",  
                "Как си": "Чудесно, благодаря! А ти?",  
                "как си": "Чудесно, благодаря! А ти?",
+
                "Какво е най-важното в живота?": "Здравето, щастието и добрите отношения.",  
                "Какво е най-важното в живота": "Здравето, щастието и добрите отношения.",  
                "какво е най-важното в живота": "Здравето, щастието и добрите отношения.",  
@@ -378,7 +337,27 @@
 
                "Как да се справям със стреса?": "С концентрация върху положителните моменти и почивка.",  
                "Как да се справям със стреса": "С концентрация върху положителните моменти и почивка.",  
-               "как да се справям със стреса": "С концентрация върху положителните моменти и почивка.",  
+               "как да се справям със стреса": "С концентрация върху положителните моменти и почивка.",
+
+               "Какво е Велинград?": "Велинград е град в Южна България, известен като СПА столицата на Балканите, предлагащ многобройни минерални извори, чист въздух и красиви природни забележителности.",
+               "Какво е Велинград": "Велинград е град в Южна България, известен като СПА столицата на Балканите, предлагащ многобройни минерални извори, чист въздух и красиви природни забележителности.",
+               "какво е велинград": "Велинград е град в Южна България, известен като СПА столицата на Балканите, предлагащ многобройни минерални извори, чист въздух и красиви природни забележителности.",
+            
+             "Колко минерални извора има във Велинград?": "Във Велинград има над 80 минерални извора с различен химичен състав и лечебни свойства, което го прави изключително популярен за балнеология.",
+            "Колко минерални извора има във Велинград": "Във Велинград има над 80 минерални извора с различен химичен състав и лечебни свойства, което го прави изключително популярен за балнеология.",
+            "колко минерални извора има във велинград": "Във Велинград има над 80 минерални извора с различен химичен състав и лечебни свойства, което го прави изключително популярен за балнеология.",
+
+            "Кои са основните забележителности във Велинград?": "Основните забележителности във Велинград включват Клептуза – най-големият карстов извор в България, красивите паркове, както и минералните бани и басейни.",
+            "Кои са основните забележителности във Велинград": "Основните забележителности във Велинград включват Клептуза – най-големият карстов извор в България, красивите паркове, както и минералните бани и басейни.",
+            "кои са основните забележителности във велинград": "Основните забележителности във Велинград включват Клептуза – най-големият карстов извор в България, красивите паркове, както и минералните бани и басейни.",
+
+            "Защо Велинград е СПА столица на Балканите?": "Велинград носи титлата СПА столица на Балканите благодарение на многобройните си минерални извори, модерните СПА комплекси и лечебните процедури, които привличат туристи от цял свят.",
+            "Защо Велинград е СПА столица на Балканите": "Велинград носи титлата СПА столица на Балканите благодарение на многобройните си минерални извори, модерните СПА комплекси и лечебните процедури, които привличат туристи от цял свят.",
+            "защо велинград е спа столица на балканите": "Велинград носи титлата СПА столица на Балканите благодарение на многобройните си минерални извори, модерните СПА комплекси и лечебните процедури, които привличат туристи от цял свят.",
+
+            "Какво представлява паркът Клептуза?": "Паркът Клептуза е емблематична природна забележителност във Велинград, включваща голям карстов извор, живописни езера и приятни места за отдих и разходка.",
+            "Какво представлява паркът Клептуза": "Паркът Клептуза е емблематична природна забележителност във Велинград, включваща голям карстов извор, живописни езера и приятни места за отдих и разходка.",
+            "какво представлява паркът клептуза": "Паркът Клептуза е емблематична природна забележителност във Велинград, включваща голям карстов извор, живописни езера и приятни места за отдих и разходка.", 
                "Кой те е създал": "Теодор Филипов ме създаде."
             };
 
