--- a/chat1.html
+++ b/chat1.html
@@ -530,6 +530,10 @@
             "Хей": "Хей! Как мога да ти помогна днес?",
             "хей": "Хей! Как мога да ти помогна днес?",
 
+            "Здр?": "Здр! Как мога да ти помогна днес?",
+            "Здр": "Здр! Как мога да ти помогна днес?",
+            "здр": "Здр! Как мога да ти помогна днес?",
+
 
 
             "Кой те е създал?": "Теодор Филипов ме създаде.",
