--- a/chat1.html
+++ b/chat1.html
@@ -534,17 +534,17 @@
             "Здр": "Здр! Как мога да ти помогна днес?",
             "здр": "Здр! Как мога да ти помогна днес?",
 
-            "Какво е времето в София?": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
-            "Какво е времето в София": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
-            "какво е времето в София": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
+            "Какво е времето в София?": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='window.location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
+            "Какво е времето в София": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='window.location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
+            "какво е времето в София": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='window.location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
 
-            "Вали ли днес във Велинград?": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
-            "Вали ли днес във Велинград": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
-            "вали ли днес във Велинград": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
+            "Вали ли днес във Велинград?": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='window.location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
+            "Вали ли днес във Велинград": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='window.location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
+            "вали ли днес във Велинград": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='window.location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
 
-            "Каква е температурата във Варна?": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
-            "Каква е температурата във Варна": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
-            "каква е температурата във Варна": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
+            "Каква е температурата във Варна?": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='window.location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
+            "Каква е температурата във Варна": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='window.location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
+            "каква е температурата във Варна": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='window.location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
 
             "Кой те е създал?": "Теодор Филипов ме създаде.",
             "Кой те е създал": "Теодор Филипов ме създаде.",
