--- a/chat1.html
+++ b/chat1.html
@@ -534,18 +534,19 @@
             "Здр": "Здр! Как мога да ти помогна днес?",
             "здр": "Здр! Как мога да ти помогна днес?",
 
-            "Какво е времето в София?": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='window.location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
-            "Какво е времето в София": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='window.location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
-            "какво е времето в София": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='window.location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
 
-            "Вали ли днес във Велинград?": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='window.location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
-            "Вали ли днес във Велинград": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='window.location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
-            "вали ли днес във Велинград": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='window.location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
+    "Какво е времето в София?": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html' target='_blank'>WeatherChat</a> и вижте цялата прогноза.",
+    "Какво е времето в София": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html' target='_blank'>WeatherChat</a> и вижте цялата прогноза.",
+    "какво е времето в София": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html' target='_blank'>WeatherChat</a> и вижте цялата прогноза.",
 
-            "Каква е температурата във Варна?": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='window.location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
-            "Каква е температурата във Варна": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='window.location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
-            "каква е температурата във Варна": "Отидете на WeatherChat.html и вижте цялата прогноза. <button onclick='window.location.href=\"WeatherChat.html\"'>Виж прогнозата</button>",
+            "Вали ли днес във Велинград?": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html' target='_blank'>WeatherChat</a> и вижте цялата прогноза.",
+            "Вали ли днес във Велинград": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html' target='_blank'>WeatherChat</a> и вижте цялата прогноза.",
+            "вали ли днес във Велинград": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html' target='_blank'>WeatherChat</a> и вижте цялата прогноза.",
 
+            "Каква е температурата във Варна?": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html' target='_blank'>WeatherChat</a> и вижте цялата прогноза.",
+            "Каква е температурата във Варна": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html' target='_blank'>WeatherChat</a> и вижте цялата прогноза.",
+            "каква е температурата във Варна": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html' target='_blank'>WeatherChat</a> и вижте цялата прогноза.",
+            
             "Кой те е създал?": "Теодор Филипов ме създаде.",
             "Кой те е създал": "Теодор Филипов ме създаде.",
             "кой те е създал": "Теодор Филипов ме създаде."
