--- a/chat1.html
+++ b/chat1.html
@@ -535,17 +535,17 @@
             "здр": "Здр! Как мога да ти помогна днес?",
 
 
-    "Какво е времето в София?": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html' target='_blank'>WeatherChat</a> и вижте цялата прогноза.",
-    "Какво е времето в София": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html' target='_blank'>WeatherChat</a> и вижте цялата прогноза.",
-    "какво е времето в София": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html' target='_blank'>WeatherChat</a> и вижте цялата прогноза.",
+            "Какво е времето в София?": "Отидете на https://teicheto.github.io/WeatherChat.html и вижте цялата прогноза.",
+            "Какво е времето в София": "Отидете на https://teicheto.github.io/WeatherChat.html и вижте цялата прогноза.",
+            "какво е времето в София": "Отидете на https://teicheto.github.io/WeatherChat.html и вижте цялата прогноза.",
 
-            "Вали ли днес във Велинград?": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html' target='_blank'>WeatherChat</a> и вижте цялата прогноза.",
-            "Вали ли днес във Велинград": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html' target='_blank'>WeatherChat</a> и вижте цялата прогноза.",
-            "вали ли днес във Велинград": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html' target='_blank'>WeatherChat</a> и вижте цялата прогноза.",
+            "Вали ли днес във Велинград?":  "Отидете на https://teicheto.github.io/WeatherChat.html и вижте цялата прогноза.",
+            "Вали ли днес във Велинград": "Отидете на https://teicheto.github.io/WeatherChat.html и вижте цялата прогноза.",
+            "вали ли днес във Велинград": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html и вижте цялата прогноза.",
 
-            "Каква е температурата във Варна?": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html' target='_blank'>WeatherChat</a> и вижте цялата прогноза.",
-            "Каква е температурата във Варна": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html' target='_blank'>WeatherChat</a> и вижте цялата прогноза.",
-            "каква е температурата във Варна": "Отидете на <a href='https://teicheto.github.io/WeatherChat.html' target='_blank'>WeatherChat</a> и вижте цялата прогноза.",
+            "Каква е температурата във Варна?": "Отидете на https://teicheto.github.io/WeatherChat.html и вижте цялата прогноза.",
+            "Каква е температурата във Варна": "Отидете на https://teicheto.github.io/WeatherChat.html и вижте цялата прогноза.",
+            "каква е температурата във Варна": "Отидете на https://teicheto.github.io/WeatherChat.html и вижте цялата прогноза.",
             
             "Кой те е създал?": "Теодор Филипов ме създаде.",
             "Кой те е създал": "Теодор Филипов ме създаде.",
